# rag-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/services/: llm_client.py  pdf_worker.py  reranker.py  vector_db.py
chroma_db/: chroma.sqlite3
