[project]
name = "rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.51.0",
]
